--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -11,61 +11,67 @@
       
       "image#brand1": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png"
         }
       },
       
       "image#brand2": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png"
         }
       },
 
       "image#brand3": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png"
         }
       },
 
       "image#brand4": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png"
         }
       },
 
       "image#brand5": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png"
         }
       },
 
       "image#brand6": {
         "props": {
-          "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png",
+          "imageUrl": "https://images.unsplash.com/photo-1524185962737-ea7c028a12cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
           "isFullModeStyle": true,
           "headline": "Black Friday",
           "callToActionText": "Subscribe",
-          "textPosition": "center"
+          "textPosition": "center",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png"
         }
       }
 }
