fix: "Se agrega buy button"

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -38,7 +38,8 @@
       "product-identifier.product",
       "product-price",
       "flex-layout.row#qty-sku",
-      "shipping-simulator"
+      "shipping-simulator",
+      "buy-button"
     ]
   },
 
